[package]
name = "tdc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
slab = { version = "0.4.9", features = ["serde"] }
tabled = "0.17.0"
thiserror = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
